testsuite/tests/quantified-constraints/T21006.stderr
T21006.hs:14:10: error: [GHC-05617]
    • Could not deduce ‘c’
        arising (via a quantified constraint) from
          the superclasses of an instance declaration
      from the context: (Determines b, Determines c)
        bound by a quantified constraint at T21006.hs:14:10-15
      When trying to solve the quantified constraint
        forall b (c :: Constraint). (Determines b, Determines c) => c
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘OpCode’

